<resources>
    <string name="app_name">LoginRetrofit</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_login_here">Already | Login here</string>
    <string name="login">Login</string>
    <string name="login">Login</string>
    <string name="not_register_create_your_account">Not Register| Create Your Account</string>
    <string name="dashboard">Dashboard</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>